# wattopus

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md
.github/workflows/: ci.yml  docs.yml  release.yml
crates/app/: Cargo.toml
crates/app/src/: main.rs
crates/attributor/: Cargo.toml
crates/attributor/src/: lib.rs  main.rs
crates/attributor/tests/: attribution.rs
crates/feeder/: Cargo.toml
crates/feeder/src/: main.rs
crates/ingest/: Cargo.toml
crates/ingest/src/: lib.rs
crates/k8s/: Cargo.toml
crates/k8s/src/: lib.rs
crates/mockpower/: Cargo.toml
crates/mockpower/src/: main.rs
crates/operator/: Cargo.toml
crates/operator/src/: main.rs
crates/otlp/: Cargo.toml
crates/otlp/src/: lib.rs
crates/predictor/: Cargo.toml
crates/predictor/src/: main.rs
deploy/: 00-namespace.yaml  feeder.yaml  grafana.yaml  greycat.yaml  kepler-values.yaml  kubediagram.yaml  meters.md  operator.yaml  power-mock.yaml  predictor.yaml  prometheus.yaml  tempo.yaml
deploy/apps/: rust-demo-load.yaml  rust-demo.yaml
deploy/apps/otel-demo/: values.yaml
deploy/base/: attributor.yaml  feeder.yaml  grafana.yaml  greycat.yaml  kubediagram.yaml  kustomization.yaml  operator.yaml  otel-collector.yaml  power-mock.yaml  predictor.yaml
deploy/g5k/: kustomization.yaml
deploy/kubediagram/: Dockerfile  index.html  render.sh
deploy/local/: kind.yaml
docs/: local-dev.md
greycat/: Dockerfile  project.gcl
greycat/server/: twin.gcl
schema/: check-twin.sh  ingest.sample.json
