[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "Apache-2.0"

[workspace.dependencies]
tiny_http = "0.12"
ureq = { version = "2.9", default-features = false, features = ["json", "gzip"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
log = "0.4"
env_logger = "0.10"

[profile.release]
opt-level = 2
