[package]
name = "app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "app"
path = "src/main.rs"

[dependencies]
otlp = { path = "../otlp" }
tiny_http.workspace = true
ureq.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
log.workspace = true
env_logger.workspace = true
