[package]
name = "attributor"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "attributor"
path = "src/main.rs"

[lib]
name = "attributor"
path = "src/lib.rs"

[dependencies]
tiny_http.workspace = true
ureq.workspace = true
serde.workspace = true
serde_json.workspace = true
log.workspace = true
env_logger.workspace = true
