[package]
name = "mockpower"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "mockpower"
path = "src/main.rs"

[dependencies]
tiny_http.workspace = true
ureq.workspace = true
serde.workspace = true
serde_json.workspace = true
log.workspace = true
env_logger.workspace = true
