[package]
name = "operator"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "operator"
path = "src/main.rs"

[dependencies]
ingest = { path = "../ingest" }
k8s = { path = "../k8s" }
otlp = { path = "../otlp" }
tiny_http.workspace = true
ureq.workspace = true
serde.workspace = true
serde_json.workspace = true
log.workspace = true
env_logger.workspace = true
